# TrajSim2D

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  setup.py  uninstall.sh
standalone_examples/: generate_random_environments.py  run_random_simulation.py
tests/: test_calculations.py  test_collision.py  test_environment.py  test_file_parser.py  test_geometry_canvas.py  test_shape_utils.py  test_twodmanip.py  test_utils.py  test_visualisation.py
trajsim2d_core/: 2dmanip.py  calculations.py  collision.py  environment.py  file_parser.py  geometry_canvas.py  shape_utils.py  twodmanip.py  utils.py  visualisation.py
