[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trajsim2d-core"
version = "0.1.0"
description = "2D trajectory simulation core library"
requires-python = ">=3.8"
dependencies = [
    "numpy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["trajsim2d_core*"]